k8s/msa-kafka.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: kafka-deployment
  namespace: lgcns

spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka

  template:
    metadata:
      labels:
        app: kafka

    spec:
      containers:
        - name: kafka-container
          image: wurstmeister/kafka
          ports:
          - containerPort: 9092
          - containerPort: 9093 
---

apiVersion: v1

kind: Service

metadata:
  name: kafka-service
  namespace: lgcns

spec:
  type: ClusterIP
  ports:
  - name: outside
    port: 9092
    targetPort: 9092

  - name: inside
    port: 9093
    targetPort: 9093
  selector:
    app: kafka
