k8s/msa-rabbitmq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
  namespace: lgcns

spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq

  template:
    metadata:
      labels:
        app: rabbitmq

    spec:
      # docker container 
      containers:
        - name: rabbitmq-container
          # 혹, 실행중인 컨테이너를 이미지로 만들고 ecr 배포할 경우 ecr repo 주소사용 가능
          image: rabbitmq
          ports:
          - containerPort: 5672

---

apiVersion: v1 
kind: Service
metadata:
  name: rabbitmq-service
  namespace: lgcns
spec:
  type: ClusterIP
  ports:
  - port: 5672
    targetPort: 5672
  selector:
    app: rabbitmq
