k8s/msa-ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress 

metadata:
  name: msa-ingress
  namespace: lgcns

spec:
  ingressClassName: nginx
  rules:
  #- host: server.mhpark0605.shop
   - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apigateway-service
            port:
              number: 80
